// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:checkboxes 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Checkboxes
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-inline is-thin"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionA
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionB
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionC
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionD
              </span>
            </label>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <span
                class="cxd-PlainField"
              >
                <span
                  class="text-muted"
                >
                  -
                </span>
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes 2`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Checkboxes
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-inline is-thin"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default checked cxd-Checkbox--checkbox--default--checked"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionA
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default checked cxd-Checkbox--checkbox--default--checked"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionB
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionC
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionD
              </span>
            </label>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <span
                class="cxd-PlainField"
              >
                a,b
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes with columnsCount 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes2"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  显示两列的复选框
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-thin"
          >
            <div
              class="cxd-Grid"
            >
              <div
                class="cxd-Grid-col--sm6"
              >
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                  data-role="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                  <i>
                    <div
                      class="checkbox-icon icon"
                    />
                  </i>
                  <span
                    class=""
                  >
                    OptionA
                  </span>
                </label>
              </div>
              <div
                class="cxd-Grid-col--sm6"
              >
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                  data-role="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                  <i>
                    <div
                      class="checkbox-icon icon"
                    />
                  </i>
                  <span
                    class=""
                  >
                    OptionB
                  </span>
                </label>
              </div>
            </div>
            <div
              class="cxd-Grid"
            >
              <div
                class="cxd-Grid-col--sm6"
              >
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                  data-role="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                  <i>
                    <div
                      class="checkbox-icon icon"
                    />
                  </i>
                  <span
                    class=""
                  >
                    OptionC
                  </span>
                </label>
              </div>
              <div
                class="cxd-Grid-col--sm6"
              >
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                  data-role="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                  <i>
                    <div
                      class="checkbox-icon icon"
                    />
                  </i>
                  <span
                    class=""
                  >
                    OptionD
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes with columnsCount 2`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes2"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  数组形式显示的复选框
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-thin"
          >
            <div
              class="cxd-Grid"
            >
              <div
                class="cxd-Grid-col--sm4"
              >
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                  data-role="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                  <i>
                    <div
                      class="checkbox-icon icon"
                    />
                  </i>
                  <span
                    class=""
                  >
                    OptionA
                  </span>
                </label>
              </div>
            </div>
            <div
              class="cxd-Grid"
            >
              <div
                class="cxd-Grid-col--sm4"
              >
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                  data-role="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                  <i>
                    <div
                      class="checkbox-icon icon"
                    />
                  </i>
                  <span
                    class=""
                  >
                    OptionB
                  </span>
                </label>
              </div>
              <div
                class="cxd-Grid-col--sm4"
              >
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                  data-role="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                  <i>
                    <div
                      class="checkbox-icon icon"
                    />
                  </i>
                  <span
                    class=""
                  >
                    OptionC
                  </span>
                </label>
              </div>
            </div>
            <div
              class="cxd-Grid"
            >
              <div
                class="cxd-Grid-col--sm4"
              >
                <label
                  class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                  data-role="checkbox"
                >
                  <input
                    type="checkbox"
                  />
                  <i>
                    <div
                      class="checkbox-icon icon"
                    />
                  </i>
                  <span
                    class=""
                  >
                    OptionD
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes with columnsCount 3`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  有分组的情况下显示分列的复选框
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-thin"
          >
            <div
              class="cxd-CheckboxesControl-group"
            >
              <label
                class="cxd-CheckboxesControl-groupLabel"
              >
                A类型
              </label>
              <div
                class="cxd-Grid"
              >
                <div
                  class="cxd-Grid-col--sm4"
                >
                  <label
                    class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                    data-role="checkbox"
                  >
                    <input
                      type="checkbox"
                    />
                    <i>
                      <div
                        class="checkbox-icon icon"
                      />
                    </i>
                    <span
                      class=""
                    >
                      a-1
                    </span>
                  </label>
                </div>
                <div
                  class="cxd-Grid-col--sm4"
                >
                  <label
                    class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                    data-role="checkbox"
                  >
                    <input
                      type="checkbox"
                    />
                    <i>
                      <div
                        class="checkbox-icon icon"
                      />
                    </i>
                    <span
                      class=""
                    >
                      a-2
                    </span>
                  </label>
                </div>
                <div
                  class="cxd-Grid-col--sm4"
                />
              </div>
            </div>
            <div
              class="cxd-CheckboxesControl-group"
            >
              <label
                class="cxd-CheckboxesControl-groupLabel"
              >
                B类型
              </label>
              <div
                class="cxd-Grid"
              >
                <div
                  class="cxd-Grid-col--sm4"
                >
                  <label
                    class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                    data-role="checkbox"
                  >
                    <input
                      type="checkbox"
                    />
                    <i>
                      <div
                        class="checkbox-icon icon"
                      />
                    </i>
                    <span
                      class=""
                    >
                      b-1
                    </span>
                  </label>
                </div>
                <div
                  class="cxd-Grid-col--sm4"
                >
                  <label
                    class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                    data-role="checkbox"
                  >
                    <input
                      type="checkbox"
                    />
                    <i>
                      <div
                        class="checkbox-icon icon"
                      />
                    </i>
                    <span
                      class=""
                    >
                      b-2
                    </span>
                  </label>
                </div>
                <div
                  class="cxd-Grid-col--sm4"
                >
                  <label
                    class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                    data-role="checkbox"
                  >
                    <input
                      type="checkbox"
                    />
                    <i>
                      <div
                        class="checkbox-icon icon"
                      />
                    </i>
                    <span
                      class=""
                    >
                      b-3
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="cxd-Grid"
              >
                <div
                  class="cxd-Grid-col--sm4"
                >
                  <label
                    class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                    data-role="checkbox"
                  >
                    <input
                      type="checkbox"
                    />
                    <i>
                      <div
                        class="checkbox-icon icon"
                      />
                    </i>
                    <span
                      class=""
                    >
                      b-4
                    </span>
                  </label>
                </div>
                <div
                  class="cxd-Grid-col--sm4"
                />
                <div
                  class="cxd-Grid-col--sm4"
                />
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes with defaultCheckAll & inline 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  复选框
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-inline is-thin"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default checked cxd-Checkbox--checkbox--default--checked"
              data-role="checkbox"
            >
              <input
                checked=""
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionA
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionB
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionC
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionD
              </span>
            </label>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes-two"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  复选框
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-thin"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default checked cxd-Checkbox--checkbox--default--checked"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionA
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default checked cxd-Checkbox--checkbox--default--checked"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionB
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default checked cxd-Checkbox--checkbox--default--checked"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionC
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default checked cxd-Checkbox--checkbox--default--checked"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                OptionD
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes with group 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  城市选择
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-thin"
          >
            <div
              class="cxd-CheckboxesControl-group"
            >
              <label
                class="cxd-CheckboxesControl-groupLabel"
              >
                A类型
              </label>
              <label
                class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                data-role="checkbox"
              >
                <input
                  type="checkbox"
                />
                <i>
                  <div
                    class="checkbox-icon icon"
                  />
                </i>
                <span
                  class=""
                >
                  a-1
                </span>
              </label>
              <label
                class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                data-role="checkbox"
              >
                <input
                  type="checkbox"
                />
                <i>
                  <div
                    class="checkbox-icon icon"
                  />
                </i>
                <span
                  class=""
                >
                  a-2
                </span>
              </label>
            </div>
            <div
              class="cxd-CheckboxesControl-group"
            >
              <label
                class="cxd-CheckboxesControl-groupLabel"
              >
                B类型
              </label>
              <label
                class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                data-role="checkbox"
              >
                <input
                  type="checkbox"
                />
                <i>
                  <div
                    class="checkbox-icon icon"
                  />
                </i>
                <span
                  class=""
                >
                  b-1
                </span>
              </label>
              <label
                class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                data-role="checkbox"
              >
                <input
                  type="checkbox"
                />
                <i>
                  <div
                    class="checkbox-icon icon"
                  />
                </i>
                <span
                  class=""
                >
                  b-2
                </span>
              </label>
              <label
                class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                data-role="checkbox"
              >
                <input
                  type="checkbox"
                />
                <i>
                  <div
                    class="checkbox-icon icon"
                  />
                </i>
                <span
                  class=""
                >
                  b-3
                </span>
              </label>
              <label
                class="cxd-Checkbox cxd-Checkbox--checkbox--default"
                data-role="checkbox"
              >
                <input
                  type="checkbox"
                />
                <i>
                  <div
                    class="checkbox-icon icon"
                  />
                </i>
                <span
                  class=""
                >
                  b-4
                </span>
              </label>
            </div>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                c-1
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes with menuTpl 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  复选框
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-inline is-thin"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    <span
                      class="label label-success"
                    >
                      OptionA
                    </span>
                  </span>
                </span>
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    <span
                      class="label label-danger"
                    >
                      OptionB
                    </span>
                  </span>
                </span>
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    <span
                      class="label label-warning"
                    >
                      OptionC
                    </span>
                  </span>
                </span>
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--default"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class=""
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  <span>
                    <span
                      class="label label-info"
                    >
                      OptionD
                    </span>
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkboxes with optionType & labelClassName & itemClassName 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="checkboxes"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label iamlabel"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  复选框
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxesControl cxd-Form-control is-inline is-thin"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--button iamitem first last-line"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class="iamlabel"
              >
                OptionA
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--button iamitem  last-line"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class="iamlabel"
              >
                OptionB
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--button iamitem  last-line checked cxd-Checkbox--checkbox--button--checked"
              data-role="checkbox"
            >
              <input
                checked=""
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class="iamlabel"
              >
                OptionC
              </span>
            </label>
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox--button iamitem  last last-line"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i>
                <div
                  class="checkbox-icon icon"
                />
              </i>
              <span
                class="iamlabel"
              >
                OptionD
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--primary cxd-Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
